Adding links to forked version of repo to demo page.

--- a/index.html
+++ b/index.html
@@ -243,6 +243,12 @@
    
 	 <h1>fancyBox</h1> 
 	 <p class="lead">This is a demonstration. More information and examples: <a href="demo/http://fancyapps.com/fancybox/">www.fancyapps.com/fancybox/</a></p>
+   
+   <p>
+     This example combines fancyBox and <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.
+     The source code for this forked version of the fancyBox demo can be found at 
+     <a href="https://github.com/lossius/fancyBoxWithBootstrap/" target="_blank">https://github.com/lossius/fancyBoxWithBootstrap</a>.
+   </p>
     
 	  <h3>Simple image gallery</h3>
     
